<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luisbalam.tareacurso3sem2lb.MainActivity">

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/confirmacionDatos"
        android:text="@string/confirmacion_datos"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/nombreConfirmacion"
        android:text="@string/nombre"
        android:textSize="@dimen/tamaño_texto"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/nacimientoConfirmacion"
        android:text="@string/fecha_nacimiento"
        android:textSize="@dimen/tamaño_texto"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/telefonoConfirmacion"
        android:text="@string/telefono"
        android:textSize="@dimen/tamaño_texto"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/correoConfirmacion"
        android:text="@string/email"
        android:textSize="@dimen/tamaño_texto"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <TextView
        android:layout_width="@dimen/tamaño_horizontal_textinput"
        android:layout_height="wrap_content"
        android:id="@+id/acercaConfirmacion"
        android:text="@string/descripcion_contacto"
        android:textSize="@dimen/tamaño_texto"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"/>

    <Button
        android:layout_width="@dimen/tamaño_horizontal_boton_fecha"
        android:layout_height="50dp"
        android:id="@+id/botonEditarDatos"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_textinput"
        android:text="@string/editar_datos"
        android:theme="@style/BotonSiguiente"
        android:onClick="presionarBotonEditar"/>

</LinearLayout>
